<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MetasoloPos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scan_text">将二维码/条码放入框内, 即可自动扫描</string>
    <string name="none_found">未发现设备</string>
    <string name="none_paired">没有已匹配的设备</string>
    <string name="login">登录</string>
    <string name="cash_system">收银系统</string>
    <string name="member_msg">会员信息</string>
    <string name="recommend_match">推荐搭配</string>
    <string name="guide_page">导购页面</string>
    <string name="sort">分类</string>
    <string name="brand">品牌</string>
    <string name="total">共计：</string>
    <string name="goods">件商品</string>
    <string name="goods_detail">商品详情</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="buy_now">立即购买</string>
    <string name="amount">数量：</string>
    <string name="color">颜色</string>
    <string name="size">尺码</string>
    <string name="set">设置</string>
    <string name="keepbills">挂单记录</string>
    <string name="common">通用</string>
    <string name="nothing">暂无</string>
    <string name="settlement_of_cashier">收银结算</string>
    <string name="change_count">修改数量：</string>
    <string name="confirm">确  认</string>
    <string name="cancel">取  消</string>
    <string name="new_members">新增会员</string>
    <string name="member_name">姓名：</string>
    <string name="member_sex">性     别：</string>
    <string name="member_phone">手机号：</string>
    <string name="member_card">卡     号：</string>
    <string name="member_grade">会员等级：</string>
    <string name="member_remark">备     注：</string>
    <string name="member_keyword">关键词 ：</string>
    <string name="logout_exit">换班并退出</string>
    <string name="logout_report">当日销售报告</string>
    <string name="logout_indent_number">订单数量</string>
    <string name="logout_sale_amount">销售数量</string>
    <string name="logout_indent_money">订单金额</string>
    <string name="logout_traffic">客流量</string>
    <string name="logout_indent_conversion">订单转换率</string>
    <string name="logout_cash">现金金额</string>
    <string name="logout_alipay">支付宝金额</string>
    <string name="logout_wechat">微信金额</string>
    <string name="logout_credit">信用卡金额</string>
    <string name="logout_gift">礼品卡金额</string>
    <string name="member_list_chose">请选择会员</string>
    <string name="search_result">搜索结果</string>
    <string name="search_style_number">款号</string>
    <string name="search_pro_name">商品名称</string>
    <string name="search_amount">数量</string>
    <string name="set_language">语言设置</string>
    <string name="set_print">打印小票</string>
    <string name="member_fragment_name">姓名：</string>
    <string name="member_fragment_sex">性     别：</string>
    <string name="member_fragment_phone">手机号：</string>
    <string name="member_fragment_card">卡     号：</string>
    <string name="member_fragment_grade">会员等级：</string>
    <string name="member_fragment_tag">标     签：</string>
    <string name="member_fragment_remark">备     注：</string>
    <string name="member_fragment_keyword">关键词 ：</string>
    <string name="xianjia">现价</string>
    <string name="promo">优惠折扣：</string>
    <string name="ordingtotle">订单总额：</string>
    <string name="promoed">已优惠：</string>
    <string name="keepbillsop">挂单</string>
    <string name="saledorderform">销售订单</string>
    <string name="reprint">重打小票</string>
    <string name="good">商品</string>
    <string name="price">价格</string>
    <string name="count">数量</string>
    <string name="returned">可退货</string>
    <string name="client">客流量统计查询</string>

</resources>