<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:background="@android:color/white" >

        <ImageView
            android:id="@+id/iv_search_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:src="@drawable/bank" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/search_result"
            android:textColor="#6BC2EE"
            android:textSize="26sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="300"
        android:background="#EEEEEE"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#DDEEF8"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_search_brand"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:gravity="center"
                    android:text="@string/brand"
                    android:textColor="#6FB2DA"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3" />

                <TextView
                    android:id="@+id/tv_search_stylenum"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/search_style_number"
                    android:textColor="#6FB2DA"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3" />

                <TextView
                    android:id="@+id/tv_search_proname"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:gravity="center_vertical"
                    android:text="@string/search_pro_name"
                    android:textColor="#6FB2DA"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3" />

                <TextView
                    android:id="@+id/tv_search_color"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/color"
                    android:textColor="#6FB2DA"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3" />

                <TextView
                    android:id="@+id/tv_search_size"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/size"
                    android:textColor="#6FB2DA"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3" />

                <TextView
                    android:id="@+id/tv_search_count"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/search_amount"
                    android:textColor="#6FB2DA"
                    android:textSize="20sp" />
            </LinearLayout>

            <ListView
                android:id="@+id/lv_search_product"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <include
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        layout="@layout/loading"
        android:visibility="gone" />

</LinearLayout>