<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:text="@string/change_count"
                android:textColor="#000000"
                android:textSize="30sp"
                android:paddingLeft="10dp" />
			<EditText
			    android:id="@+id/et_detail_num"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:gravity="center"
                android:hint="请输入数量"
                android:textColor="#000000"
                android:textSize="30sp" 
                android:inputType="number"
                android:background="#ffffff"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_detail_yes"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="100"
                    android:background="#da5935"
                    android:gravity="center"
                    android:text="@string/confirm"
                    android:textColor="#000000"
                    android:textSize="27sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:background="#ffffff" >
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_detail_no"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="100"
                    android:background="#da5935"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="#ffffff"
                    android:textSize="27sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            android:orientation="horizontal" >
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>
