<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1.5"
                android:background="#ffffff"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left"
                    android:paddingLeft="10dp"
                    android:text="@string/change_count"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/num"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:hint="请输入数量"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/yes"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="100"
                        android:background="@drawable/selector_logout_enter"
                        android:gravity="center"
                        android:text="@string/confirm"
                        android:textColor="#000000"
                        android:textSize="27sp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:orientation="horizontal" >
                    </LinearLayout>

                    <TextView
                        android:id="@+id/no"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="100"
                        android:background="@drawable/selector_logout_cancel"
                        android:gravity="center"
                        android:text="@string/cancel"
                        android:textColor="#ffffff"
                        android:textSize="27sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

    <include
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        layout="@layout/loading"
        android:visibility="gone" />

</RelativeLayout>